{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 157,
  "lineage": "c0d77481-8b92-fef4-0e50-6a1d3d2f1905",
  "resources": [
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws-alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:loadbalancer/app/test-alb/a8fb7ca4c6e1e41e",
            "arn_suffix": "app/test-alb/a8fb7ca4c6e1e41e",
            "dns_name": "test-alb-1824338449.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:081951471531:loadbalancer/app/test-alb/a8fb7ca4c6e1e41e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "security_groups": [
              "sg-05a345d88746fe5d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02261f533b1fdda66"
              },
              {
                "subnet_id": "subnet-09031f08686d24edd"
              }
            ],
            "subnets": [
              "subnet-02261f533b1fdda66",
              "subnet-09031f08686d24edd"
            ],
            "tags": {
              "Name": "test-alb-public"
            },
            "tags_all": {
              "Name": "test-alb-public"
            },
            "vpc_id": "vpc-0cc3748db645f4dea",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.albf.aws_security_group.alb-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test-alb-listner1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:listener/app/test-alb/a8fb7ca4c6e1e41e/0f1b7312b640aab4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:targetgroup/test-tg-public/fec7c912101a7d51",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:081951471531:listener/app/test-alb/a8fb7ca4c6e1e41e/0f1b7312b640aab4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:loadbalancer/app/test-alb/a8fb7ca4c6e1e41e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_lb.aws-alb1",
            "module.albf.aws_lb_target_group.target-group1",
            "module.albf.aws_security_group.alb-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:targetgroup/test-tg-public/fec7c912101a7d51",
            "arn_suffix": "targetgroup/test-tg-public/fec7c912101a7d51",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:081951471531:targetgroup/test-tg-public/fec7c912101a7d51",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-tg-public",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc3748db645f4dea"
          }
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:081951471531:security-group/sg-05a345d88746fe5d9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05a345d88746fe5d9",
            "ingress": [],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "081951471531",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3748db645f4dea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:081951471531:security-group/sg-0c8262c13a592d45a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c8262c13a592d45a",
            "ingress": [],
            "name": "asg-sg1",
            "name_prefix": "",
            "owner_id": "081951471531",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3748db645f4dea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-1812171473",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8262c13a592d45a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.asg-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4147977009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8262c13a592d45a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.asg-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3366635789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8262c13a592d45a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.asg-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2116064440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8262c13a592d45a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.asg-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3714910193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c8262c13a592d45a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.asg-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-3229794607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a345d88746fe5d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.alb-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1539068111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a345d88746fe5d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.alb-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1895786701",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a345d88746fe5d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.alb-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3329570168",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a345d88746fe5d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.alb-sg1"
          ]
        }
      ]
    },
    {
      "module": "module.albf",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2176940124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05a345d88746fe5d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albf.aws_security_group.alb-sg1"
          ]
        }
      ]
    }
  ]
}